# data_science

./: .gitignore  LICENSE  README.md  pyproject.toml
01_ML_basics/: 00_perceptron.ipynb  01_perceptron.ipynb  02_convolution.ipynb
01_machine_learning/: 01_linear_regression.ipynb  02_linear_regression_chemistry_data.ipynb  classification_bank_marketing.ipynb  linear_regression.ipynb
02_CV_image_classification/: 01_lenet_pytorch.ipynb
02_computer_vision/: 00_convolution.ipynb  01_lenet_pytorch.ipynb  02_resnet50_tensorflow.ipynb  resnet50_tensorflow.ipynb
agents_llm/: langgraph.ipynb
computer_vision/: convolution.ipynb  lenet_pytorch.ipynb
helper_functions/: pyproject.toml
helper_functions/src/helper_functions/: __init__.py  plots.py
machine_learning/: classification_bank_marketing.ipynb  linear_regression.ipynb
