[project]
name = "data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "jupyterlab>=4.4.4",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "missingno>=0.5.2",
    "mypy>=1.16.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pillow>=11.3.0",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "rich>=14.0.0",
    "ruff>=0.12.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "xgboost>=3.0.2",
]

[tool.ruff.lint]
preview = true
select = [
    "I",
    "F",
    "E",
    "W",
    "N",
    "PL",
    "PT",
    "ANN",
    "Q",
    "ARG",
    "PD",
    "NPY",
    "FAST",
    "RUF",
    "PERF",
]
ignore = ["PLR0913", "PLR0917", "PD901", "N806"]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.uv.workspace]
members = ["helper_functions"]

[tool.uv.sources]
helper-functions = { workspace = true }

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
