[project]
name = "data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fastparquet>=2024.11.0",
    "helper-functions",
    "httpx>=0.28.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.4",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=1.0.2",
    "langgraph>=0.6.7",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "missingno>=0.5.2",
    "mypy>=1.16.1",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pillow>=11.3.0",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.2.1",
    "rich>=14.0.0",
    "ruff>=0.12.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]

[tool.ruff.lint]
preview = true
select = [
    "I",
    "F",
    "E",
    "W",
    "N",
    "PL",
    "PT",
    "ANN",
    "Q",
    "ARG",
    "PD",
    "NPY",
    "FAST",
    "RUF",
    "PERF",
]
ignore = ["PLR0913", "PLR0917", "PD901", "N806"]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.uv.workspace]
members = ["helper_functions"]

[tool.uv.sources]
helper-functions = { workspace = true }

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
